--- a/public/index.html
+++ b/public/index.html
@@ -920,7 +920,7 @@
                                 <p class="lead" style="font-size:24px; font-weight:bold;">
                                       Enter your info to get our awesome monthly newsletter
                                     </p>
-                                    <form method="POST" data-netlify="true">
+                                    <form action="/signup" method="POST" >
                                       <div class="form-group">
                                         <input
                                           type="text"
@@ -948,9 +948,6 @@
                                           placeholder="Email"
                                         />
                                       </div>
-                                      <div class="field" data-netlify-recaptcha="true">
-
-                                        </div>
                                       <button type="submit" class="btn btn-primary btn-block" style="background-color:red; font-size:18px;">
                                         Sign Up
                                       </button>
