--- a/public/index.html
+++ b/public/index.html
@@ -1076,7 +1076,7 @@
                     </div>
                     <div class="container">
                         <div class="contact-form">
-                            <form name="sentMessage" id="contactForm" method="POST" data-netlify="true">
+                            <!-- <form name="sentMessage" id="contactForm" method="POST" data-netlify="true">
                                 <div class="row">
                                     <div class="contact-menu">
                                         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -1113,7 +1113,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </form>
+                            </form> -->
                             <div class="social-icons">
                                 <ul class="social-icon-list">
                                     <li>
